[RED] JPARepository adjutment - making new test for LamaranServiceImpl