@@ -42,12 +42,12 @@ public class LamaranServiceImplTest {
         when(lowonganRepository.getLowonganById(dummyLamaran.getIdLowongan()))
                 .thenReturn(mock(Lowongan.class));
 
-        when(lamaranRepository.createLamaran(any(Lamaran.class))).thenReturn(dummyLamaran);
+        when(lamaranRepository.save(any(Lamaran.class))).thenReturn(dummyLamaran);
 
         Lamaran created = lamaranService.createLamaran(dummyLamaran);
 
         assertEquals(dummyLamaran, created);
-        verify(lamaranRepository, times(1)).createLamaran(dummyLamaran);
+        verify(lamaranRepository, times(1)).save(dummyLamaran);
     }
 
     @Test
@@ -58,23 +58,23 @@ public class LamaranServiceImplTest {
             lamaranService.createLamaran(dummyLamaran);
         });
 
-        verify(lamaranRepository, never()).createLamaran(any());
+        verify(lamaranRepository, never()).save(any());
     }
 
     @Test
     void testGetLamaran() {
         List<Lamaran> list = List.of(dummyLamaran);
-        when(lamaranRepository.getLamaran()).thenReturn(list);
+        when(lamaranRepository.findAll()).thenReturn(list);
 
         List<Lamaran> result = lamaranService.getLamaran();
 
         assertEquals(1, result.size());
-        assertEquals(dummyLamaran, result.get(0));
+        assertEquals(dummyLamaran, result.getFirst());
     }
 
     @Test
     void testGetLamaranByIdFound() {
-        when(lamaranRepository.getLamaranById(dummyLamaran.getId())).thenReturn(dummyLamaran);
+        when(lamaranRepository.findById(dummyLamaran.getId())).thenReturn(Optional.ofNullable(dummyLamaran));
 
         Lamaran found = lamaranService.getLamaranById(dummyLamaran.getId());
 
@@ -84,7 +84,7 @@ public class LamaranServiceImplTest {
 
     @Test
     void testGetLamaranByIdNotFound() {
-        when(lamaranRepository.getLamaranById(any())).thenReturn(null);
+        when(lamaranRepository.findById(any())).thenReturn(Optional.empty());
 
         Lamaran result = lamaranService.getLamaranById(UUID.randomUUID());
 
@@ -93,26 +93,26 @@ public class LamaranServiceImplTest {
 
     @Test
     void testUpdateLamaran() {
-        when(lamaranRepository.getLamaranById(dummyLamaran.getId())).thenReturn(dummyLamaran);
-        when(lamaranRepository.createLamaran(any(Lamaran.class))).thenAnswer(i -> i.getArgument(0));
+        when(lamaranRepository.findById(dummyLamaran.getId())).thenReturn(Optional.ofNullable(dummyLamaran));
+        when(lamaranRepository.save(any(Lamaran.class))).thenAnswer(i -> i.getArgument(0));
 
         dummyLamaran.setIpk(3.8f);
         Lamaran updated = lamaranService.updateLamaran(dummyLamaran.getId(), dummyLamaran);
 
         assertEquals(3.8f, updated.getIpk());
-        verify(lamaranRepository).createLamaran(updated);
+        verify(lamaranRepository).save(updated);
     }
 
     @Test
     void testDeleteLamaran() {
         UUID id = dummyLamaran.getId();
         lamaranService.deleteLamaran(id);
-        verify(lamaranRepository, times(1)).deleteLamaran(id);
+        verify(lamaranRepository, times(1)).deleteById(id);
     }
 
     @Test
     void testIsLamaranExistsTrue() {
-        when(lamaranRepository.getLamaran()).thenReturn(List.of(dummyLamaran));
+        when(lamaranRepository.findAll()).thenReturn(List.of(dummyLamaran));
 
         boolean exists = lamaranService.isLamaranExists(dummyLamaran);
 
@@ -121,7 +121,7 @@ public class LamaranServiceImplTest {
 
     @Test
     void testIsLamaranExistsFalse() {
-        when(lamaranRepository.getLamaran()).thenReturn(List.of());
+        when(lamaranRepository.findAll()).thenReturn(List.of());
 
         boolean exists = lamaranService.isLamaranExists(dummyLamaran);
 
@@ -131,7 +131,7 @@ public class LamaranServiceImplTest {
     @Test
     void testGetLamaranByLowonganId() {
         UUID idLowongan = dummyLamaran.getIdLowongan();
-        when(lamaranRepository.getLamaran()).thenReturn(List.of(dummyLamaran));
+        when(lamaranRepository.findAll()).thenReturn(List.of(dummyLamaran));
 
         List<Lamaran> result = lamaranService.getLamaranByLowonganId(idLowongan);
 
@@ -141,19 +141,19 @@ public class LamaranServiceImplTest {
 
     @Test
     void testAcceptLamaran() {
-        when(lamaranRepository.getLamaranById(dummyLamaran.getId())).thenReturn(dummyLamaran);
+        when(lamaranRepository.findById(dummyLamaran.getId())).thenReturn(Optional.ofNullable(dummyLamaran));
         lamaranService.acceptLamaran(dummyLamaran.getId());
 
         assertEquals(StatusLamaran.DITERIMA, dummyLamaran.getStatus());
-        verify(lamaranRepository).createLamaran(dummyLamaran);
+        verify(lamaranRepository).save(dummyLamaran);
     }
 
     @Test
     void testRejectLamaran() {
-        when(lamaranRepository.getLamaranById(dummyLamaran.getId())).thenReturn(dummyLamaran);
+        when(lamaranRepository.findById(dummyLamaran.getId())).thenReturn(Optional.ofNullable(dummyLamaran));
         lamaranService.rejectLamaran(dummyLamaran.getId());
 
         assertEquals(StatusLamaran.DITOLAK, dummyLamaran.getStatus());
-        verify(lamaranRepository).createLamaran(dummyLamaran);
+        verify(lamaranRepository).save(dummyLamaran);
     }
 }
